# vandy_hacks

./: .gitignore  TODO.md
backend/: pyproject.toml
backend/write/authentication/: apps.py  hooks.py  models.py  permissions.py  serializers.py  signals.py  tokens.py  urls.py  utils.py  views.py
backend/write/authentication/management/commands/: populatetestdb.py
backend/write/authentication/migrations/: 0001_initial.py
backend/write/authentication/tests/: tests_token.py  tests_user.py
backend/write/core/: admin.py  apps.py  models.py  serializers.py  signals.py  suggestion.py  urls.py  views.py
backend/write/core/migrations/: 0001_initial.py
backend/write/write/: asgi.py  router.py  settings.py  urls.py  views.py  wsgi.py
frontend/write/: package-lock.json  package.json
frontend/write/public/: index.html
frontend/write/src/: App.js  index.js  store.js
frontend/write/src/api/: utils.js
frontend/write/src/components/: Editor.js  FileList.js  Login.js  Sidebar.js
frontend/write/src/pages/: Home.js
perplexity/: main.py  pyproject.toml
