[tool.poetry]
name = "perplexity"
version = "0.1.0"
description = ""
authors = ["Gnik Droy <gnikdroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.50.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
